# thinkingsdk-python

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  README.md  TESTING_GUIDE.md  benchmark.py  demo_project.py  enhanced_example_usage.py  example_usage.py  example_yaml_usage.py  pyproject.toml  quick_test_autofix.py  requirements.txt  run_tests.py  setup.py  setup_testing.py  sitecustomize_example.py  test_auto_fix_engine.py  test_client_features.py  test_dashboard_fixes.py  test_markdown_rendering.py  test_scenarios.py  test_server_fix.py  validate_setup.py
scripts/: clear_data.sh  reset_database.sh
tests/: __init__.py  test_background_sender.py  test_client_integration.py  test_config.py  test_event_queue.py  test_instrumentation.py  test_packaging_and_api.py  test_sample_data.py  test_utils.py
tests/integration/: test_real_world_scenarios.py
tests/unit/: test_custom_events.py
tests/unit/client/: test_event_deduplicator.py
tests/unit/server/: test_database_ops.py  test_intelligent_analyzer.py  test_server.py  test_server_simple.py
thinking_sdk_client/: .instrumentation.py.swp  __init__.py  _version.py  async_instrumentation.py  auto_instrument.py  background_sender.py  config.py  config_loader.py  context.py  enhanced_context.py  event_deduplicator.py  event_queue.py  exception_chain.py  instrumentation.py  performance_monitor.py  pii_scrubber.py  strategic_sampling.py  thinkingsdk.yaml  validate.py
thinking_sdk_client/integrations/: __init__.py  console.py  django.py  fastapi.py  flask.py  logging.py  stdlib.py
thinkingsdk/: __init__.py  async_instrumentation.py  auto_instrument.py  background_sender.py  config.py  config_loader.py  context.py  custom_events.py  enhanced_queue.py  event_queue.py  instrumentation.py  performance_monitor.py  pii_scrubber.py  strategic_sampling.py  validate.py
thinkingsdk/integrations/: __init__.py  django.py  flask.py  middleware_base.py  psycopg2.py  pymongo.py  redis_integration.py  sqlalchemy.py
