[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkingsdk"
version = "0.1.0"
description = "AI-powered runtime debugging and insights for Python applications"
readme = "README.md"
authors = [
    {name = "ThinkingSDK Team", email = "support@thinkingsdk.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["debugging", "monitoring", "observability", "AI", "runtime", "insights"]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "pyyaml>=5.4",
    "contextvars>=2.4;python_version<'3.7'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "psutil>=5.9",
]
server = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    "pydantic>=2.0.0",
]
performance = [
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://thinkingsdk.com"
Documentation = "https://docs.thinkingsdk.com"
Repository = "https://github.com/thinkingsdk/thinking-sdk-python"
Issues = "https://github.com/thinkingsdk/thinking-sdk-python/issues"
Changelog = "https://github.com/thinkingsdk/thinking-sdk-python/blob/main/CHANGELOG.md"

[project.scripts]
thinking = "thinkingsdk.cli:main"
thinking-validate = "thinkingsdk.validate:main"

[tool.setuptools.packages.find]
include = ["thinkingsdk*"]
namespaces = false

[tool.setuptools.package-data]
thinkingsdk = ["*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["thinkingsdk"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]